--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.532.0",
     "next": "15.4.4",
     "next-intl": "^4.3.4",
