--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/swc-wasm-nodejs": "^16.1.3",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.532.0",
-    "next": "15.4.4",
-    "next-intl": "^4.3.4",
+    "next": "^16.1.3",
+    "next-intl": "^4.7.0",
     "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -25,7 +26,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.4",
+    "eslint-config-next": "^16.1.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
